plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
	id "org.sonarqube" version "4.4.1.3373"
	id "jacoco"
}

group = 'org.bedu'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	//Documentation
	implementation'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	//Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	//Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}
jacocoTestReport {
    reports {
        xml.required = true
    }
	// gradle jacocoTestReport
}

//Excluye reporte
// test {
//   jacoco {
//     excludes = [
//       'org.bedu.dto.*',
//       'org.bedu.model.*',
//       'org.bedu.mapper.*',
//       'org.bedu.Application.class'
//     ]
//   }
// }

//esto va dentro de jacocoTestReport
// afterEvaluate {
//       classDirectories.setFrom(files(classDirectories.files.collect {
//             fileTree(dir: it,
//                 exclude: [
//                   'org/bedu/dto/**',
//                   'org/bedu/model/**',
//                   'org/bedu/mapper/**',
//                   'org/bedu/Application.class'
//                 ]
//             )
//       }))
//     }

// tasks.named('sonar') {
//   dependsOn test
// }
